@@ -2,6 +2,7 @@ Version 1.1.1
 -------------
 
 - Allow overriding the location of the properties file.
+- Add support for handling and uploading Proguard files to Sentry (for Android applications).
 
 Version 1.1.0
 -------------
